# FastSNN

./: .gitignore  README.md  oneclick.py  pyproject.toml  requirements.txt  setup.py
configs/: tiny.yaml
fastsnn/: __init__.py
fastsnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastsnn/attention/: hybrid.py  linear.py  sliding_window.py
fastsnn/builder/: __init__.py  adapters.py  ann2snn.py  config.py  model_from_config.py  presets.py  utils.py
fastsnn/cli/: main.py
fastsnn/convert/: ann2snn.py
fastsnn/core/: __init__.py  config.py  registry.py  spike_tensor.py
fastsnn/deploy/: __init__.py  export.py  loader.py  serve.py
fastsnn/ffn/: __init__.py  pulse_ffn.py  pulse_moe.py
fastsnn/neurons/: __init__.py  adaptive_threshold.py  adex_sint.py  lif_sint.py  sint.py  surrogate.py
fastsnn/scope/: __init__.py  hooks.py  report.py  spikescope.py
fastsnn/train/: __init__.py  extend.py  hooks.py  schedulers.py  trainer.py  utils.py
scripts/: eval_ppl.py  export_snn.py  serve.py  train.py
tests/: test_train.py
